--- a/ADDnano/.gitignore
+++ b/ADDnano/.gitignore
@@ -1,3 +1,4 @@
+HELP.md
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
@@ -34,7 +35,3 @@ out/
 
 ### VS Code ###
 .vscode/
-
-### JAVA ###
-*.log
-
